[metadata]
description-file = README.md

[coverage:run]
omit =
    exampeles/*
    */dist-packages/*
    tests.py

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-complexity = 25
doctests = True
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504,
    D100
    D101,
    D102,
    D103,
    D105,
    D107,
    D400,
    D401,
    E231
noqa-require-code = True
